test(scheduling): cập nhật/xóa test theo feature đã gỡ